--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "The Hoa\\Visitor library.",
     "type"       : "library",
     "keywords"   : ["library", "visitor", "visit", "structure"],
-    "homepage"   : "https://hoa-project.net/",
+    "homepage"   : "http://hoa-project.net/",
     "license"    : "BSD-3-Clause",
     "authors"    : [
         {
@@ -12,31 +12,17 @@
         },
         {
             "name"    : "Hoa community",
-            "homepage": "https://hoa-project.net/"
+            "homepage": "http://hoa-project.net/"
         }
     ],
     "support": {
-        "email" : "support@hoa-project.net",
-        "irc"   : "irc://chat.freenode.net/hoaproject",
-        "forum" : "https://users.hoa-project.net/",
-        "docs"  : "https://central.hoa-project.net/Documentation/Library/Visitor",
-        "source": "https://central.hoa-project.net/Resource/Library/Visitor"
+        "email" : "ivan.enderlin@hoa-project.net",
+        "forum" : "http://forum.hoa-project.net",
+        "irc"   : "irc://irc.freenode.org/hoaproject",
+        "source": "http://git.hoa-project.net/"
     },
     "require": {
-        "php"            : ">=5.5.0",
-        "hoa/consistency": "~1.0"
+        "hoa/core": "dev-master"
     },
-    "require-dev": {
-        "hoa/test": "~2.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Hoa\\Visitor\\": "."
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
-    }
+    "minimum-stability": "dev"
 }
